FIX: --list in some directories

--- a/doc/tm.1
+++ b/doc/tm.1
@@ -376,7 +376,7 @@ Combined OS-ARCH: "macosx-arm64", "linux-x64", "windows-x64"
 Compiler name: "gcc", "clang", "msvc"
 .TP
 .B ${PROFILE}
-Build profile from \fB\-\-profile\fR option, config file, PROFILE environment variable, or default "debug"
+Build profile from \fB\-\-profile\fR option, config file, PROFILE environment variable, or default "dev"
 
 Example usage in compiler configuration:
 .nf
