DEV: implement pattern-based discovery and change timeouts to seconds
Major Changes:

1. Pattern-Based Test Discovery
   - Remove hardcoded .tst.* extension expectations
   - File type now determined by final extension (.c, .js, .sh, etc.)
   - Discovery driven purely by configured include patterns
   - Enables flexible naming: *.tst.c, *.test.c, *.tst.macosx.c, etc.
   - Platform-specific patterns (macosx/linux/windows) only apply on that platform

2. Timeout Units Changed to Seconds
   - execution.timeout: 30000ms → 30s
   - services.*Timeout: milliseconds → seconds
   - services.delay: milliseconds → seconds
   - All handlers convert seconds to milliseconds internally
   - Updated documentation (README, man page, testme.json5)

3. Discovery Implementation
   - New matchesIncludePatterns() method checks patterns first
   - Replace analyzeFile() with analyzeFileByExtension()
   - Uses final extension only: extname() instead of TEST_EXTENSIONS map
   - Simplify EXTENSION_TO_TYPE mapping (.c → C, .js → JavaScript)
   - Update filterByPatterns() for new pattern-based flow

4. Platform-Specific Test Support
   - Tests like windows.tst.win.c only discovered on Windows
   - Tests like test.tst.macosx.c only discovered on macOS
   - Pattern merging correctly combines base + platform patterns
   - Verified backward compatibility with existing .tst.c tests

5. New TTY Utilities
   - Add src/utils/tty.ts for terminal interaction
   - Detect interactive terminals (isInteractiveTTY)
   - Provide ANSI escape codes for progress display
   - Enable overwritable output for test runner

Benefits:
- Maximum flexibility in test naming conventions
- Platform-specific tests are natural and intuitive
- No hardcoded assumptions - fully configuration-driven
- Backward compatible - existing configs work unchanged
- Cleaner timeout configuration (seconds vs milliseconds)

--- a/doc/tm.1
+++ b/doc/tm.1
@@ -266,7 +266,7 @@ Control test execution behavior:
 .nf
 {
     execution: {
-        timeout: 30000,        // Timeout per test (ms)
+        timeout: 30,           // Timeout per test (seconds)
         parallel: true,        // Run tests in parallel
         workers: 4,            // Number of parallel workers
     }
@@ -328,18 +328,18 @@ Configure skip, prep, setup and cleanup commands:
         prep: "make build",
         setup: "docker-compose up -d",
         cleanup: "docker-compose down",
-        skipTimeout: 30000,
-        prepTimeout: 30000,
-        setupTimeout: 30000,
-        cleanupTimeout: 10000,
-        delay: 3000                // Wait 3 seconds after setup before tests
+        skipTimeout: 30,             // Timeout in seconds
+        prepTimeout: 30,             // Timeout in seconds
+        setupTimeout: 30,            // Timeout in seconds
+        cleanupTimeout: 10,          // Timeout in seconds
+        delay: 3                     // Wait 3 seconds after setup before tests
     }
 }
 .fi
 
 The skip command runs first to determine if tests should be executed. Exit code 0 enables tests, non-zero skips them. The skip script can output a message (stdout or stderr) explaining why tests are skipped, displayed in verbose mode.
 
-The prep command runs once before all tests begin and waits for completion. The setup command starts a background service that runs during test execution. The \fBdelay\fR field specifies milliseconds to wait after the setup service starts before beginning test execution, allowing time for service initialization. The cleanup command runs after all tests complete to clean up resources.
+The prep command runs once before all tests begin and waits for completion. The setup command starts a background service that runs during test execution. The \fBdelay\fR field specifies seconds to wait after the setup service starts before beginning test execution, allowing time for service initialization. The cleanup command runs after all tests complete to clean up resources.
 
 .SS Environment Variables
 Configure environment variables available to all tests during execution. Supports platform-specific overrides via \fBwindows\fR, \fBmacosx\fR, and \fBlinux\fR keys:
